# JavBot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt  test_favorites.py  test_simple.py  test_split.py
.github/workflows/: ci.yml
app/: browser_pool.py  cache.py  config.py  fav_manager.py  favorites.py  formatters.py  http_utils.py  improved_utils.py  magnet_search.py  main.py  main.py.backup  models.py  rate_limiter.py  scheduler.py  secure_callback.py  service.py
app/handlers/: __init__.py  common.py  favorites.py  history.py  magnet.py  push.py  rank.py  search.py  settings.py  stats.py  works.py
app/services/: __init__.py  i18n_service.py  javbus_service.py  javdb_scraper.py  javdb_service.py  name_match_service.py  rank_service.py  resolver.py  text_utils.py  wiki_service.py
data/: favorites.db
scripts/: migrate_sqlite_to_mysql.py
tests/: conftest.py  test_service_async.py
tests/integration/: test_favorites.py  test_integration.py  test_simple.py
tests/scraping/: test_javbus_rank.py
tests/scripts/: benchmark_pagination.py  migrate_actress_data.py  test_avatar.py  test_callback_handlers.py  test_dmm_api.py  test_javdb_curl.py  test_playwright_javdb.py
tests/service/: test_favlatest.py  test_magnet.py  test_magnet_e2e.py  test_search.py  test_service_async.py
tests/unit/: test_cache.py  test_callback.py  test_favorites.py  test_favorites_ui.py  test_formatters.py  test_handlers_favorites.py  test_handlers_search.py  test_handlers_works.py  test_i18n.py  (+6 more)
(+18 files in other folders)
